--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
     
     - name: Run unit tests
       run: |
-        pytest -m unit --cov=app --cov-report=term-missing -v
+        pytest -m unit --cov=app --cov-report=term-missing --cov-report=xml -v
     
     - name: Run integration tests
       run: |
@@ -65,6 +65,11 @@ jobs:
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
+      if: matrix.python-version == '3.10'
+    
+    - name: Generate coverage report
+      run: |
+        pytest -m unit --cov=app --cov-report=html
       if: matrix.python-version == '3.10'
 
   docker-build-test:
